# MicroAST

./: .gitignore  README.md  pyproject.toml
src/microast/: __init__.py  __main__.py  train_microAST.py
